# rapier-demo

./: Cargo.toml
.cargo/: config.toml
src/: main.rs  qr.rs
